--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: "docs"
 
 website:
-  title: "Deskriptive Statistik WiSe 22"
+  title: "DS WiSe 22"
   navbar:
     left:
       - href: Vorlesung.qmd
